# aoc

./: .gitignore  README.md  aoc.opam  dune-project
lib/days/: day01.ml  day02.ml  day03.ml  day04.ml  dune
lib/runner/: dune  runner.ml
test/days/: dune  test_day01.ml  test_day02.ml  test_day03.ml  test_day04.ml
