(lang dune 3.16)

(name aoc)

(generate_opam_files true)

(source
 (github RishikeshNK/aoc))

(authors "Rishikesh Kanabar")

(package
 (name aoc)
 (synopsis "Advent of Code")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
